--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <nav class="dark center bg-2 mob-m">
+  <nav class="dark center">
     <div class="menu-icon">
       <div class="inner"></div>
     </div>
     <div class="container">
-      <div class="menu mob-top">
+      <div class="menu">
         <ul>
           <li><a href="">Home</a></li>
           <li><a href="">Blog</a></li>
